--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="main-nav">
                 <h2>Mochiko</h2>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="./index.html">Home</a></li>
                     <li><a href="#recipe">Recipes</a></li>
                     <li><a href="#aboutus">About</a></li>
                     <li><a href="#contact">Contact</a></li>
@@ -42,7 +42,7 @@
     <main>
         <div class="front">
             <div class="plate">
-                <img src="/images/blackp.png" class="plate-roll">
+                <img src="./images/blackp.png" class="plate-roll">
                 <div class="dat">
                     <h1>Mochiko</h1>
                     <p>Crafting Happiness in One Bite</p>
@@ -86,9 +86,9 @@
                 <li><h4>Special Occasions :</h4><p>Show-stopping dishes for holidays, celebrations, and entertaining.</p></li>
             </ul>
             <div class="aboutimg">
-                <img src="/images/a3.jpg" alt="M1" id="m1">
-                <img src="/images/a2.jpg" alt="M2" id="m2">
-                <img src="/images/a1.jpg" alt="M3" id="m3">
+                <img src="./images/a3.jpg" alt="M1" id="m1">
+                <img src="./images/a2.jpg" alt="M2" id="m2">
+                <img src="./images/a1.jpg" alt="M3" id="m3">
             </div>
         </div>
         <div class="recipes" id="recipe">
@@ -106,58 +106,58 @@
                 <div class="r jap sweet">
                     <div class="sub-r">
                         <h1>Mochi Icecream</h1>
-                        <img src="/images/mochi.png">
+                        <img src="./images/mochi.png">
                     </div>
                     <a href="/Mochiko_Recipes/r1.html"><button>See Recipe</button></a>
                 </div>
                 <div class="r jap">
                     <div class="sub-r">
                         <h1>Ramen</h1>
-                        <img src="/images/ramen.png">
+                        <img src="./images/ramen.png">
                     </div>
-                    <a href="/Mochiko_Recipes/r2.html"><button>See Recipe</button></a>
+                    <a href="./Mochiko_Recipes/r2.html"><button>See Recipe</button></a>
                 </div>
                 <div class="r sweet">
                     <div class="sub-r">
                         <h1>Cream Puff</h1>
-                        <img src="/images/creampuff.png">
+                        <img src="./images/creampuff.png">
                     </div>
-                    <a href="Mochiko_Recipes/r3.html"><button>See Recipe</button></a>
+                    <a href="./Mochiko_Recipes/r3.html"><button>See Recipe</button></a>
                 </div>
                 <div class="r west">
                     <div class="sub-r">
                         <h1>Blueberry Cheesecake</h1>
-                        <img src="/images/CheeseCake.png">
+                        <img src="./images/CheeseCake.png">
                     </div>
-                    <a href="/Mochiko_Recipes/r4.html"><button>See Recipe</button></a>
+                    <a href="./Mochiko_Recipes/r4.html"><button>See Recipe</button></a>
                 </div>
                 <div class="r drink">
                     <div class="sub-r">
                         <h1>Oreo Milkshake</h1>
-                        <img src="/images/oreoshake.png">
+                        <img src="./images/oreoshake.png">
                     </div>
-                    <a href="/Mochiko_Recipes/r5.html"><button>See Recipe</button></a>
+                    <a href="./Mochiko_Recipes/r5.html"><button>See Recipe</button></a>
                 </div>
                 <div class="r ind">
                     <div class="sub-r">
                         <h1>Mater Paneer</h1>
-                        <img src="/images/mattarpaneer.png">
+                        <img src="./images/mattarpaneer.png">
                     </div>
-                    <a href="/Mochiko_Recipes/r6.html"><button>See Recipe</button></a>
+                    <a href="./Mochiko_Recipes/r6.html"><button>See Recipe</button></a>
                 </div>
                 <div class="r drink">
                     <div class="sub-r">
                         <h1>Litchi Juice</h1>
-                        <img src="/images/litchijuice.png">
+                        <img src="./images/litchijuice.png">
                     </div>
                     <a href="/Mochiko_Recipes/r7.html"><button>See Recipe</button></a>
                 </div>
                 <div class="r kor">
                     <div class="sub-r">
                         <h1>Kkul Ppang</h1>
-                        <img src="/images/kcgb.png">
+                        <img src="./images/kcgb.png">
                     </div>
-                    <a href="/Mochiko_Recipes/r8.html"><button>See Recipe</button></a>
+                    <a href="./Mochiko_Recipes/r8.html"><button>See Recipe</button></a>
                 </div>
             </div>
         </div>
@@ -168,15 +168,15 @@
                     <h2>Welcome to Mochiko</h2>
                     <p>At Mochiko, we believe that cooking is an art form and that everyone can be an artist in the kitchen. Our website was created with one mission in mind: to inspire and empower home cooks of all skill levels to create delicious, beautiful dishes.</p>
                     <div class="aboutimg">
-                        <img src="/images/m1.jpg" alt="M1" id="m1">
-                        <img src="/images/m2.jpg" alt="M2" id="m2">
-                        <img src="/images/m3.jpg" alt="M3" id="m3">
+                        <img src="./images/m1.jpg" alt="M1" id="m1">
+                        <img src="./images/m2.jpg" alt="M2" id="m2">
+                        <img src="./images/m3.jpg" alt="M3" id="m3">
                     </div>
                 </div>
                 <div class="ourstory">
                     <h2>Our Story</h2>
                     <p>The idea for Mochiko began in 2024 when our founder, <span>Ryoichi</span> <span>Tanaka</span>, realized that while there were countless recipe websites, few offered a blend of authenticity, creativity, and practicality. Drawing from a rich culinary heritage and a passion for food, <span>Ryoichi</span> <span>Tanaka</span> decided to create a platform that celebrates both traditional and innovative recipes.</p>
-                    <img src="/images/me.png" alt="me">
+                    <img src="./images/me.png" alt="me">
                 </div>
                 <div class="ourmission">
                     <h2>Our Mission</h2>
@@ -187,9 +187,9 @@
                         <li><h4>Education :</h4><p>Through detailed instructions, step-by-step photos, and video tutorials, we aim to educate and inspire our users to expand their culinary horizons.</p></li>
                     </ul>
                     <div class="aboutimg">
-                        <img src="/images/o2.jpg" alt="M1" id="m1">
-                        <img src="/images/o3.jpg" alt="M2" id="m2">
-                        <img src="/images/o1.jpg" alt="M3" id="m3">
+                        <img src="./images/o2.jpg" alt="M1" id="m1">
+                        <img src="./images/o3.jpg" alt="M2" id="m2">
+                        <img src="./images/o1.jpg" alt="M3" id="m3">
                     </div>
                 </div>
                 <div class="join">
@@ -201,16 +201,16 @@
                         <li><h4>Blog :</h4><p>Visit our blog for in-depth articles on cooking techniques, ingredient spotlight, and kitchen hacks.</p></li>
                     </ul>
                     <div class="aboutimg">
-                        <img src="/images/w1.jpg" alt="M1" id="m1">
-                        <img src="/images/w2.jpg" alt="M2" id="m2">
-                        <img src="/images/w3.jpg" alt="M3" id="m3">
+                        <img src="./images/w1.jpg" alt="M1" id="m1">
+                        <img src="./images/w2.jpg" alt="M2" id="m2">
+                        <img src="./images/w3.jpg" alt="M3" id="m3">
                     </div>
                 </div>
             </div>
         </div>
         <div class="contact" id="contact">
             <div class="contactus">
-                <img src="/images/me.png" alt="me">
+                <img src="./images/me.png" alt="me">
                 <h1>Contact <br>us</h1>
                 <div class="icons">
                     <i class="fa fa-whatsapp"></i>
@@ -252,7 +252,7 @@
         </div>
         <div class="feedback" id="feedback">
             <form id="feedback-form">
-                <img src="/images/me2.png" alt="me">
+                <img src="./images/me2.png" alt="me">
                 <h1>Feedback</h1>
                 <h2>We value your feedback!</h2>
                 <div class="feed">
@@ -430,7 +430,7 @@
         <div class="add-recipe" id="addrecipe">
             <div class="add-re">
                 <h1>Add Recipe</h1>
-                <img src="/images/me3.png" alt="me">
+                <img src="./images/me3.png" alt="me">
                 <form>
             
                     <div class="recipe-section">
