--- a/Mochiko_Recipes/r2.html
+++ b/Mochiko_Recipes/r2.html
@@ -58,6 +58,9 @@
         <div class="ingredient">
             <h1 id="ingredient">Ingredients</h1>
             <div class="sub-ingredient">
+                <div class="dup-ingredient-img">
+                    <img src="../images/ingredient2.jpg" alt="Blueberry Mochi">
+                </div>
                 <ul>
                     <li><p>Ramen noodles (our classic Maruchan package is all we need, sans the seasoning!)</p></li>
                     <li><p>Garlic and ginger</p></li>
