--- a/Mochiko_Recipes/r3.html
+++ b/Mochiko_Recipes/r3.html
@@ -58,6 +58,9 @@
         <div class="ingredient">
             <h1 id="ingredient">Ingredients</h1>
             <div class="sub-ingredient">
+                <div class="dup-ingredient-img">
+                    <img src="../images/ingredients3.jpg" alt="Blueberry Mochi">
+                </div>
                 <ul>
                     <li><p>2 (3.5 ounce) packages instant vanilla pudding mix</p></li>
                     <li><p>2 cups heavy cream</p></li>
