--- a/Mochiko_Recipes/r4.html
+++ b/Mochiko_Recipes/r4.html
@@ -58,6 +58,9 @@
         <div class="ingredient">
             <h1 id="ingredient">Ingredients</h1>
             <div class="sub-ingredient">
+                <div class="dup-ingredient-img">
+                    <img src="../images/ingredients4.jpg" alt="Blueberry Mochi">
+                </div>
                 <ul>
                     <li><p>1 cup graham cracker crumbs</p></li>
                     <li><p>¼ cup melted butter</p></li>
