--- a/Mochiko_Recipes/r5.html
+++ b/Mochiko_Recipes/r5.html
@@ -58,6 +58,9 @@
         <div class="ingredient">
             <h1 id="ingredient">Ingredients</h1>
             <div class="sub-ingredient">
+                <div class="dup-ingredient-img">
+                    <img src="../images/ingredients5.png" alt="Blueberry Mochi">
+                </div>
                 <ul>
                     <li><p>1 pint vanilla ice cream</p></li>
                     <li><p>1 cup milk (preferably whole milk)</p></li>
