--- a/Mochiko_Recipes/r7.html
+++ b/Mochiko_Recipes/r7.html
@@ -58,6 +58,9 @@
         <div class="ingredient">
             <h1 id="ingredient">Ingredients</h1>
             <div class="sub-ingredient">
+                <div class="dup-ingredient-img">
+                    <img src="../images/ingredients7.png" alt="Blueberry Mochi">
+                </div>
                 <ul>
                     <li><p>Fresh litchies</p></li>
                     <li><p>Ice cubes (optional)</p></li>
