--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
             </ul>
             <div class="copy">
                 <h3 id="name">Mochiko</h3>
-                <h1>Copyright © 2024 Mochiko, Inc.</h1>
+                <a href="https://creativecommons.org">Mochiko</a> © 2024 by <a href="https://creativecommons.org">Rohit Choudhary</a> is licensed under <a href="https://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC 4.0</a><img src="https://mirrors.creativecommons.org/presskit/icons/cc.svg" alt="" style="max-width: 1em;max-height:1em;margin-left: .2em;"><img src="https://mirrors.creativecommons.org/presskit/icons/by.svg" alt="" style="max-width: 1em;max-height:1em;margin-left: .2em;"><img src="https://mirrors.creativecommons.org/presskit/icons/nc.svg" alt="" style="max-width: 1em;max-height:1em;margin-left: .2em;">
             </div>
             <ul id="icons">
                 <li><a href="">Privacy Policy</a></li>
